--- a/.html
+++ b/.html
@@ -4,9 +4,25 @@
   <title>Developer's Dashboard</title>
   <script defer src="/static/script.js"></script>
   <style>
-    body { font-family: Arial; margin: 40px; background: #f7f7f7; }
-    input, button { padding: 10px; margin: 5px 0; width: 240px; }
-    li { margin: 10px 0; background: #e0e0e0; padding: 10px; border-radius: 5px; }
+    body 
+    { 
+      font-family: Arial; 
+      margin: 40px; 
+      background: #f7f7f7; 
+    }
+    input, button 
+    { 
+      padding: 10px; 
+      margin: 5px 0; 
+      width: 240px; 
+    }
+    li 
+    { 
+      margin: 10px 0; 
+      background: #e0e0e0; 
+      padding: 10px; 
+      border-radius: 5px; 
+    }
   </style>
 </head>
 <body>
