--- a/.html
+++ b/.html
@@ -1,41 +1,227 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Developer's Dashboard</title>
-  <script defer src="/static/script.js"></script>
+  <meta charset="UTF-8">
+  <title>21n Developer's Dashboard</title>
   <style>
-    body 
-    { 
-      font-family: Arial; 
-      margin: 40px; 
-      background: #f7f7f7; 
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to bottom right, #f0f4f7, #dfe6ed);
+      margin: 0;
+      padding: 0;
     }
-    input, button 
-    { 
-      padding: 10px; 
-      margin: 5px 0; 
-      width: 240px; 
+
+    .header {
+      background-color: #1b1f23;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      position: relative;
     }
-    li 
-    { 
-      margin: 10px 0; 
-      background: #e0e0e0; 
-      padding: 10px; 
-      border-radius: 5px; 
+
+    .header::before {
+      content: "21n";
+      position: absolute;
+      top: 5px;
+      left: 20px;
+      font-size: 150px;
+      color: rgba(255, 255, 255, 0.04);
+      font-weight: bold;
+      z-index: 0;
+      pointer-events: none;
+    }
+
+    .header h1 {
+      margin: 0;
+      z-index: 1;
+      position: relative;
+    }
+
+    .container {
+      padding: 30px;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    .input-group {
+      margin-bottom: 15px;
+    }
+
+    input, select {
+      padding: 10px;
+      width: 100%;
+      font-size: 16px;
+      margin-top: 5px;
+    }
+
+    button {
+      padding: 10px 15px;
+      background-color: #007bff;
+      border: none;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+
+    table {
+      width: 100%;
+      margin-top: 30px;
+      border-collapse: collapse;
+      background: white;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    th, td {
+      padding: 12px;
+      border: 1px solid #ddd;
+      text-align: center;
+    }
+
+    th {
+      background-color: #f4f4f4;
+    }
+
+    .action-btn {
+      margin: 0 5px;
+      padding: 5px 10px;
+      font-size: 14px;
+    }
+
+    .edit-btn {
+      background-color: #ffc107;
+      color: black;
+    }
+
+    .delete-btn {
+      background-color: #dc3545;
+      color: white;
     }
   </style>
 </head>
 <body>
-  <h1>Developer's Dashboard</h1>
+  <div class="header">
+    <h1>21n Developer Dashboard</h1>
+  </div>
 
-  <input id="name" placeholder="Enter name"><br>
-  <input id="status" placeholder="Enter status (example Available)"><br>
-  <input id="mood" placeholder="Enter mood (example Happy)"><br>
+  <div class="container">
+    <div class="input-group">
+      <label>Name:</label>
+      <input type="text" id="name">
+    </div>
+    <div class="input-group">
+      <label>Status:</label>
+      <select id="status">
+        <option>Available</option>
+        <option>Occupied</option>
+        <option>On Leave</option>
+      </select>
+    </div>
+    <div class="input-group">
+      <label>Feeling:</label>
+      <select id="feeling">
+        <option>Happy</option>
+        <option>Neutral</option>
+        <option>Stressed</option>
+      </select>
+    </div>
+    <button onclick="addDeveloper()">Add Developer</button>
 
-  <button onclick="addDeveloper()">Add Developer</button>
-  <button onclick="updateDeveloper()" id="updateBtn" style="display:none;">Update Developer</button>
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Status</th>
+          <th>Feeling</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody id="devTable"></tbody>
+    </table>
+  </div>
 
-  <h2>List of Developer's</h2>
-  <ul id="devList"></ul>
+  <script>
+    let editingId = null;
+
+    function fetchDevelopers() {
+      fetch('/api/developers')
+        .then(res => res.json())
+        .then(data => {
+          const table = document.getElementById('devTable');
+          table.innerHTML = '';
+          data.forEach(dev => {
+            const row = `
+              <tr>
+                <td>${dev.name}</td>
+                <td>${dev.status}</td>
+                <td>${dev.feeling}</td>
+                <td>
+                  <button class="action-btn edit-btn" onclick="editDeveloper(${dev.id}, '${dev.name}', '${dev.status}', '${dev.feeling}')">Edit</button>
+                  <button class="action-btn delete-btn" onclick="deleteDeveloper(${dev.id})">Delete</button>
+                </td>
+              </tr>
+            `;
+            table.innerHTML += row;
+          });
+        });
+    }
+
+    function addDeveloper() {
+      const name = document.getElementById('name').value;
+      const status = document.getElementById('status').value;
+      const feeling = document.getElementById('feeling').value;
+
+      if (!name.trim()) return alert('Please enter a name.');
+
+      const data = { name, status, feeling };
+
+      if (editingId) {
+        fetch(`/api/developers/${editingId}`, {
+          method: 'PUT',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(data)
+        }).then(() => {
+          editingId = null;
+          clearForm();
+          fetchDevelopers();
+        });
+      } else {
+        fetch('/api/developers', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(data)
+        }).then(res => {
+          if (!res.ok) {
+            alert('Failed to add developer.');
+          } else {
+            clearForm();
+            fetchDevelopers();
+          }
+        });
+      }
+    }
+
+    function editDeveloper(id, name, status, feeling) {
+      document.getElementById('name').value = name;
+      document.getElementById('status').value = status;
+      document.getElementById('feeling').value = feeling;
+      editingId = id;
+    }
+
+    function deleteDeveloper(id) {
+      if (confirm("Are you sure to delete?")) {
+        fetch(`/api/developers/${id}`, { method: 'DELETE' })
+          .then(() => fetchDevelopers());
+      }
+    }
+
+    function clearForm() {
+      document.getElementById('name').value = '';
+      document.getElementById('status').value = 'Available';
+      document.getElementById('feeling').value = 'Happy';
+    }
+
+    window.onload = fetchDevelopers;
+  </script>
 </body>
 </html>
